--- a/Pfp.js/public/index1.html
+++ b/Pfp.js/public/index1.html
@@ -1,4 +1,41 @@
+<!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" type="text/css" href="mystyle.css">
+</head>
+<body>
+  <h1 class="center">Register Yourself</h1>
+  <table class="center">
+    <form action="/register" method="post">
+      <tr>
+        <td>First Name:</td>
+        <td><input type="text" name="first_name"></td>
+      </tr>
+      <tr>
+        <td>Last Name:</td>
+        <td><input type="text" name="last_name"></td>
+      </tr>
+      <tr>
+        <td>Email:</td>
+        <td><input type="text" name="username"></td>
+      </tr>
+      <tr>
+        <td>Password:</td>
+        <td><input type="password" name="pwd"></td>
+      </tr>
+      <tr>
+        <td colspan="2" class="center"><input type="submit" value="Submit"></td>
+      </tr>
+    </form>
+
+    <tr>
+      <td colspan="2" class="center">Registered User? Click <a href="login.html">here</a> to login</td>
+    </tr>
+  </table>
+</body>
+</html>
+
+<!-- <html>
    <head>
       <link rel="stylesheet" type="text/css" href="mystyle.css">
    </head>
@@ -17,4 +54,4 @@
       <tr><td colspan="2" align="center">Registered User? Click <a href="login.html">here</a> to login</td></tr> 
       </table>
    </body>
-</html>
+</html> -->
