--- a/Pfp.js/public/login.html
+++ b/Pfp.js/public/login.html
@@ -1,4 +1,32 @@
+<!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" type="text/css" href="mystyle.css">
+</head>
+<body>
+  <h1 class="center">Login Here</h1>
+  <table class="center">
+    <form action="/login" method="post">
+      <tr>
+        <td>Email:</td>
+        <td><input type="text" name="username"></td>
+      </tr>
+      <tr>
+        <td>Password:</td>
+        <td><input type="password" name="pwd"></td>
+      </tr>
+      <tr>
+        <td colspan="2" class="center"><input type="submit" value="Submit"></td>
+      </tr>
+    </form>
+    <tr>
+      <td colspan="2" class="center">New User? Click <a href="index1.html">here</a> to register</td>
+    </tr>
+  </table>
+</body>
+</html>
+
+<!-- <html>
    <head>
       <link rel="stylesheet" type="text/css" href="mystyle.css">
    </head>
@@ -14,4 +42,4 @@
       <tr><td colspan="2" align="center">New User? Click <a href="index1.html">here</a> to register</td></tr> 
       </table>
    </body>
-</html>
+</html> -->
